--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "greenlock-express": "^4.0.3",
     "sqlite3": "^5.0.2",
     "tmi.js": "^1.8.3"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "husky": "^8.0.1"
   }
 }
